# Wangscape

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  STYLE_GUIDE.md  Wangscape.sln  appveyor.yml  build-spotify-json.bat  travis-osx.sh  travis-ubuntu-docker.sh  travis-ubuntu.sh
Wangscape/: AlphaCalculator.cpp  AlphaCalculator.h  AlphaCalculatorBase.cpp  AlphaCalculatorBase.h  AlphaCalculatorLinear.cpp  AlphaCalculatorLinear.h  AlphaCalculatorMax.cpp  AlphaCalculatorMax.h  BorderInfo.cpp  BorderInfo.h  BorderModuleGroupLocation.h  BorderOffsetSpec.h  BorderOffsets.h  CMakeLists.txt  CornerCombiner.cpp  CornerCombiner.h  CornerCombinerBase.cpp  CornerCombinerBase.h  CornerCombinerGroup.cpp  CornerCombinerGroup.h  Corners.h  Curve.h  Exp.h  FlattenedModule.cpp  FlattenedModule.h  Gradient.h  Interval.cpp  Interval.h  Main.cpp  Main.h  MakeReseedable.cpp  MakeReseedable.h  MetaOutput.cpp  MetaOutput.h  ModuleFactories.cpp  ModuleFactories.h  ModuleGroup.cpp  ModuleGroup.h  NoiseMap.cpp  NoiseMap.h  (+66 more)
Wangscape/codecs/: BorderModuleGroupLocationCodec.h  OptionsCodec.h  OutputFilenamesCodec.h  RectCodec.h  TerrainModuleGroupLocationCodec.h  TerrainSpecCodec.h  TileCodec.h  TileFormatCodec.h  TileLocationCodec.h  TilesetCodec.h  Vector2Codec.h
Wangscape/example/: combiner_module_group.json  default_module_group.json  example.json  example_options.json
Wangscape/example3/: combiner_module_group.json  example_options.json
Wangscape/image/: CMakeLists.txt  CopyRegionParameters.cpp  CopyRegionParameters.h  Image.cpp  Image.h  NDArray.cpp  NDArray.h  Steps.h  TileRearrangement.cpp  TileRearrangement.h  TileRearranger.cpp  TileRearranger.h
Wangscape/logging/: Appender.h  AppenderType.h  CMakeLists.txt  ConsoleAppender.cpp  ConsoleAppender.h  FileAppender.cpp  FileAppender.h  Level.h  Logger.h  Logging.cpp  Logging.h
Wangscape/metaoutput/: CMakeLists.txt  Filenames.h  MetaOutput.cpp  MetaOutput.h  OutputFilenames.h  Tile.cpp  Tile.h  TileGroups.h  TileLocation.cpp  TileLocation.h  Tileset.cpp  Tileset.h
Wangscape/metaoutput/codecs/: FilenamesCodec.h  TileCodec.h  TileLocationCodec.h  TilesetCodec.h
Wangscape/noise/: CMakeLists.txt  EncodedModuleGroup.cpp  EncodedModuleGroup.h  MakeReseedable.cpp  MakeReseedable.h  ModuleGroup.cpp  ModuleGroup.h  ModuleGroupContainer.cpp  ModuleGroupContainer.h  ModuleID.h  ModuleManager.cpp  ModuleManager.h  NoiseMap.cpp  NoiseMap.h  RasterBase.cpp  RasterBase.h  RasterImage.cpp  RasterImage.h  RasterValues.cpp  RasterValues.h  Reseedable.cpp  Reseedable.h  WangscapeNoise.h  WangscapeNoiseCodecs.h
Wangscape/noise/codecs/: EncodedModuleGroupCodec.h
Wangscape/noise/module/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  CornerCombinerBase.cpp  CornerCombinerBase.h  Divide.h  Exp.h  Forward.h  Gradient.h  Logarithm.h  ModuleFactories.cpp  ModuleFactories.h  ModuleGroup.cpp  ModuleGroup.h  ModulePtr.h  ModuleWithSources.cpp  ModuleWithSources.h  NoiseSources.h  NormLPQ.cpp  NormLPQ.h  OldModuleGroup.cpp  OldModuleGroup.h  Pow.h  QuadrantSelector.cpp  QuadrantSelector.h  Reciprocal.h  Reseedable.cpp  Reseedable.h  ReseedableBase.h  ReseedableOps.cpp  ReseedableOps.h  ReseedablePtr.h  ReseedableT.h  UniformTriple.h  WangscapeModules.h  Wrapper.cpp  Wrapper.h  WrapperBase.cpp  WrapperBase.h
Wangscape/noise/module/codecs/: AbsWrapperCodec.cpp  AbsWrapperCodec.h  AddWrapperCodec.cpp  AddWrapperCodec.h  BillowWrapperCodec.cpp  BillowWrapperCodec.h  BitmapWrapperCodec.cpp  BitmapWrapperCodec.h  BlendWrapperCodec.cpp  BlendWrapperCodec.h  CMakeLists.txt  CacheWrapperCodec.cpp  CacheWrapperCodec.h  CheckerboardWrapperCodec.cpp  CheckerboardWrapperCodec.h  ClampWrapperCodec.cpp  ClampWrapperCodec.h  (+71 more)
Wangscape/tilegen/: CMakeLists.txt  CartesianPower.h  CartesianPowerIterator.h  CoordinatePacker.h  DebugTilesetID.cpp  DebugTilesetID.h  ModuleGroupRole.h  TileGenerator.cpp  TileGenerator.h  TilesetGenerator.cpp  TilesetGenerator.h
Wangscape/tilegen/alpha/: AlphaCalculatorBase.cpp  AlphaCalculatorBase.h  AlphaCalculatorLinear.cpp  AlphaCalculatorLinear.h  AlphaCalculatorMax.cpp  AlphaCalculatorMax.h  AlphaCalculatorMode.h  CMakeLists.txt  CalculatorBase.cpp  CalculatorBase.h  CalculatorDither.cpp  CalculatorDither.h  CalculatorLinear.cpp  CalculatorLinear.h  CalculatorMax.cpp  CalculatorMax.h  CalculatorMode.cpp  CalculatorMode.h  CalculatorTopTwo.cpp  CalculatorTopTwo.h
Wangscape/tilegen/partition/: CMakeLists.txt  DebugWriter.cpp  DebugWriter.h  TilePartitionerBase.cpp  TilePartitionerBase.h  TilePartitionerGradient.cpp  TilePartitionerGradient.h  TilePartitionerNoise.cpp  TilePartitionerNoise.h  TilePartitionerPerlin.cpp  TilePartitionerPerlin.h  TilePartitionerSquares.cpp  TilePartitionerSquares.h
WangscapeGui/: CMakeLists.txt  CustomGraphicsView.cpp  CustomGraphicsView.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OptionsEditor.cpp  OptionsEditor.h  OptionsEditor.ui  WangscapeGui.vcxproj  WangscapeGui.vcxproj.filters  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionseditor.cpp  optionseditor.h  optionseditor.ui  qt5.props
WangscapeTest/: CMakeLists.txt  DocumentationPath.cpp  DocumentationPath.h  OptionsFilename.cpp  OptionsFilename.h  TestBitmap.cpp  TestCalculatorDither.cpp  TestCalculatorLinear.cpp  TestCalculatorMax.cpp  TestCalculatorTopTwo.cpp  TestCartesianPower.cpp  TestCase.cpp  TestCoordinatePacker.cpp  TestCornerCombiner.cpp  TestCurve.cpp  TestDivide.cpp  TestEdgeFavouringMask.cpp  TestEncodedModuleGroup.cpp  TestIPow.cpp  TestIPowSigned.cpp  TestInterval.cpp  TestLogarithm.cpp  TestMetaOutput.cpp  TestModuleCodec.cpp  TestModuleDecode.cpp  TestModuleGroup.cpp  TestMovingScaleBias.cpp  TestNormLPQ.cpp  TestOldModuleGroup.cpp  TestOptions.cpp  TestPeak.cpp  TestPolynomial.cpp  TestPolynomialAugmented.cpp  TestPowInt.cpp  TestPowIntSigned.cpp  TestRasterImage.cpp  TestRasterValues.cpp  TestReciprocal.cpp  TestRequiringOptions.cpp  TestRequiringOptions.h  (+20 more)
WangscapeTest/codecs/examples/: Const1.json  GradientY1.json  NormLPQ1.json  Pow1.json  TranslatePoint1.json  Turbulence1.json
(+63 files in other folders)
